--- a/users-management-service.yml
+++ b/users-management-service.yml
@@ -12,7 +12,7 @@ spring:
   jpa:
     hibernate:
       ddlAuto: create-drop
-      dialect: org.hibernate.dialect.MySQL5Dialect
+      dialect: org.hibernate.dialect.MySQL5InnoDBDialect
       show-sql: false
       
       
