--- a/users-management-service.yml
+++ b/users-management-service.yml
@@ -2,7 +2,7 @@ server:
   port: 9000
 spring: 
   application: 
-    name: users-management-service
+    name: bordereaux-service
   datasource: 
     driverClassName: com.mysql.jdbc.Driver
     username: root
