--- a/https/github.com/BeKhaled/bordereaux-service.yml
+++ b/https/github.com/BeKhaled/bordereaux-service.yml
@@ -7,7 +7,7 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://localhost/over
+    url: jdbc:mysql://localhost:3306/over
    
   jpa:
     hibernate:
