--- a/users-management-service.yml
+++ b/users-management-service.yml
@@ -7,7 +7,7 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/stop
+    url: jdbc:mysql://localhost:3306/storry
    
   jpa:
     hibernate:
